Support for Java 17; refactoring; trade grouping and settlement